# docs/swagger.json
@@ -9,9 +9,9 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/api/v1/repeat/{id}": {
+        "/repeat/{id}": {
             "post": {
-                "description": "Повторно отправляет запрос и возвращает результат",
+                "description": "Resends the request and returns the result",
                 "produces": [
                     "application/json"
                 ],
@@ -56,9 +56,9 @@
                 }
             }
         },
-        "/api/v1/requests": {
+        "/requests": {
             "get": {
-                "description": "Возвращает список всех запросов",
+                "description": "Returns a list of all requests",
                 "produces": [
                     "application/json"
                 ],
@@ -85,9 +85,9 @@
                 }
             }
         },
-        "/api/v1/requests/{id}": {
+        "/requests/{id}": {
             "get": {
-                "description": "Возвращает запром по ID",
+                "description": "Returns a request by ID",
                 "produces": [
                     "application/json"
                 ],
